--- a/writings/talks/dh2025/dh2025_teaching_python.org
+++ b/writings/talks/dh2025/dh2025_teaching_python.org
@@ -2,191 +2,164 @@
 
 ** "When Hacking Becomes Easy: Teaching Python In 2025"
 
-I'm going to talk about my experience teaching programming in the age
-of AI tools.
+I'm going to talk about my experience teaching programming to students
+who all use AI tools.
 
-At Pratt Institute, in New York City, I teach courses on programming
-with Python. Most recently, this summer, I taught an intermediate
-level course titled "How To Build A Bot", which was about learning how
-to automate processes with Python. For example, bots are applications
-that will interact with webpages in somehow autonomous ways, like
-downloading data from webpages, doing searches, or even posting (if
-its a social media site). Over the semester, which ended last Monday,
-students built "bots" for various tasks.
+Most recently, this summer, I taught an intermediate level programming
+course titled "How To Build A Bot", which was about learning how to
+automate processes with the Python programming language. For those who
+don't know, bots are applications that interact with webpages in
+autonomous ways, like automatically downloading data from webpages or
+posting to social media sites. Over the semester, which ended last
+Monday, students built various "bots" that did different things.
 
     SLIDE
     https://github.com/aliceaviggiani/map-bot
-    https://github.com/sgutma59/OpenAlexBibliographyBot
     https://github.com/petewise9/eBay_Scraper/
 
-For example, one bot that checks ebay for new listings of particular
-pokemon cards; another that automatically downloads data from academic
-open access repositories based on research topics; another that posts
-images and provenance information of rare maps on instagram.
+For example, one bot checked ebay every day for new listings of
+particular pokemon cards, and saved those listings to a spreadsheet;
+another bot posted images and provenance information of rare maps on
+instagram.
 
-All of these students came to my class with little to no experience
-with programming -- and they all built things that they wouldn't have
-been able to build two or three years ago. From starting almost at
-zero, they left the course with functional applications that did
-things in the world. They were able to do this for one reason: because
-they had access to free AI chatbots and agents.
+What's impressive is that all of my students came to this class with
+little to no experience with programming---and they all built things
+that they wouldn't have been able to build two or three years ago.
+From starting almost at zero, they left the course with functional
+applications that did things in the world. They were able to do this
+for one reason: because they had access to free AI tools.
 
-Of course, they used the technology in different ways.
-
-What most of them found useful was the debugging capabilities. That
-these AI-powered coding tools could toubleshoot and fix their code. In
-that sense, errors that could take hours or days to resolve can be
-resolved in seconds. 
+What most of them found useful about AI tools were the debugging
+capabilities, to toubleshoot and fix their code. In that sense, errors
+that would have previously taken hours or days to resolve could be
+resolved in seconds.
 
 Although that was also a double-edged sword. The suggested fixes
 didn't always work, and when they did work, they often led to more
-errors down the road, or to convoluted looking and functioning code
-that takes more steps than necessary to fix the problem.
+errors down the road, or to convoluted looking code that takes more
+steps than necessary to fix the problem.
 
-One of my students, for example, who was totally new to programming,
-described his experience interacting with an AI bot as if he was
-trying to convince or guide it toward a specific conclusion. He would
-say things like "I'm trying to get it to understand", and "It's coming
-around slowly", and "I'm almost there, it just needs some more
-direction."
+One of my students, who was totally new to programming, described his
+experience interacting with an AI bot as if he was trying to convince
+or guide it toward a specific conclusion. He would say things like,
+"It's coming around", and "Its almost there".
 
-In my head, I got the image of trying to get the Hulk how to sew a
-button.
+In my head, I got the image of the Hulk trying to sew a button.
 
     SLIDE hulk sewing from black-forest-labs / FLUX.1-dev
 
-You have something super powerful, and you're trying to get it to
-perform a very specific task.
+You have something super powerful, and it's attempting to perform a
+very delicate task.
 
-Sure, this is can very useful. I don't think that debugging code for
-hours, for example, will make you a better programmer. As I told my
-students, I don't think I gained anything really valuable from my
-weekends spent obsessively researching errors online. That time could
-have been used on creating and writing, rather than fixing errors.
+The good news seems to be that this lowers the barrier of entry
+significantly. But I want to make the point, perhaps controversially,
+that maybe it's not a great thing that programming is more accessible.
 
-But I also want to say that maybe it's not a great thing that
-programming is more accessible, in the sense that the barriers of
-entry have been lowered. 
+Perhaps, people should not be able to build just anything with no
+prior experience of programming. Not because they aren't genuinely
+interested in programming (though I think that is important) but
+because we should have some limits on what we can make. Creating
+should not be so easy.
 
-I don't think that people who haven't learned or aren't interested in
-learning about programming should necessarily be building things. Not
-because they aren't genuinely interested in programming (though I
-think that is important) but because we should have some limits on
-what we can make. Creating should not be so easy.
-
-Even though it seems like computer code, the internet, AI, for
-example, exists on screens and operates independantly from material
+And the reason is that, even though programming applications exist on
+computer screens, operating seemingly independantly from material
 constraints, these things are very much tied to physical components
-like hardware chips, data centers, and shipping routes, as well as
-human components like data labelling and cleaning, and content
-creation.
+like hardware chips and data centers, as well as live, human
+components like data cleaners and labellers, and of course, content
+creators in the first place.
 
-On every single one of those points that I just mentioned, AI
-companies are extracting without proper compensation.
+And for every single one of those points that I just mentioned, AI
+companies are extracting value and labor without proper compensation.
+Not only that, where it concerns the physical materials, they are
+doing so to the effect of massive ecological harm. I'm not going to go
+into details, but in the global south, there are instances in Congo,
+Kenya, Thailand, and other places where water and earth is now toxic,
+creating health problems, destroying crops, and forcing the relocation
+of communities. And if people think this is limited to the global
+south, pay attention to what is going on in Tennessee right now, over
+the past several weeks, where Elon Musk has built a new (and
+unpermitted) data center.
 
-For example, the metals necessary to make computer chips are being
-mined in the Congo, in Africa, where foreign interests have no concern
-for the effect on the local environment, are ignoring legal
-obligations to moderate or clean it up. They have contaminated the
-water, creating health problems, destroying crops, and forcing the
-relocation of communities. Also in Africa, OpenAI hired a number data
-labelers for ChatGPT, laborers who were paid $2 per hour to remove
-violent content, like child abuse, murder, torture, among other
-content, from the training data, and not offered mental health support
-for this work. Finally, even those in the global north are being
-expoited, as the AI tools are trained on content written by
-professionals like writers, artists, programmers, without
-compensation, and privitizing the profits, while simultaneously
-putting them out of business.
+While there's a big stack of exploitation operating out of view from
+our screens, those who are in charge of the technology, who are
+leading these companies, seem to always speak about AI in terms of
+abundance. There are so many clips of Sam Altman going glassy eyed as
+he revels over the possibility that every human will have access to
+their own personalized "intelligence."
 
-What I'm trying to illustrate here is that there's a big stack of
-exploitation operating out of view from our screens. Most of us in the
-global north, as the intended users for these tools, are privileged
-enough to be the top of the stack. We don't have to know about or
-acknowledge what's going on below. (Though this won't always be the
-case, as more and more content creators lose their jobs (or if not
-their jobs, the skill level and resulting level of compensation of
-their jobs) to AI that can create much more cheaply).
+#+begin_src
+    Here's one example of the kind of language he uses: 
 
-And the ones who are leading these companies speak in AI in terms of
-abundance.
+    If you think about how different the world can be, not only when every
+    person has... ChatGPT... but next they have the world's best chief of
+    staff. And then after that, every person has a company of 20 or 50
+    experts that can work super well together. And then after that,
+    everybody has a company of 10,000 experts in every field that can work
+    super well together. And if someone wants to go focus on curing
+    disease, they can do that. And if someone wants to focus on making
+    great art, they can do that.   
+#+end_src
 
-    SLIDE
+To this prospect, I say no. We don't need "intelligence" to create
+things in order to have a world of abundance. We don't need it,
+because we have it already. The world is here, and it's abundant.
 
-Sam Altman, for example, in an interview with TIME magazine in 2023,
-made the following comment:
-
-#+begin_quote
-we see a path now where the world gets much more abundant and much
-better every year, and people have the ability to do way, way more
-than we can possibly imagine today…
-
-If you think about how different the world can be, not only when every
-person has... ChatGPT... but next they have the world's best chief of
-staff. And then after that, every person has a company of 20 or 50
-experts that can work super well together. And then after that,
-everybody has a company of 10,000 experts in every field that can work
-super well together. And if someone wants to go focus on curing
-disease, they can do that. And if someone wants to focus on making
-great art, they can do that. But if you think about the cost of
-intelligence and the quality of intelligence, the cost falling, the
-quality increasing by a lot and what people can do with that, it's
-like a very different world. It's the world that sci-fi has promised
-us for a long time and for the first time, I think we get to start to
-see what that's going to look like.
-#+end_quote
-
-This view that Sam Altman is proposing is just not possible: not
-unless we accept massive amounts of labor and data exploitation and
-ecological damage.
-
-There is clearly a disconnect between what these tools can do and how
-they are materially situated.
-
-Given that, my suggestion is that this superpower needs a new
-orienation around what it means to build and to create.
-
-We don't need to manifest every idea that comes into our heads. We
-don't need to create a world of abundance, because we have it already.
 What we actually need is to slow down and think about how to make that
 existing abundance accessible to the most amount of people possible.
 
-And I'll end with a project from one of my students that builds
-something I believe is really thoughtful from this perspective.
+#+begin_src
 
-    SLIDE
-    https://github.com/jfung53/mensmagbot
+    And toward thatcd  idea, I'll end with a project from one of my
+    students. This project uses AI tools to build something
+    reflextive and analytical, rather than productive or profitable. 
 
-The project is an image generator generates a text snippet based on
-masculinity. Basically, it scrapes websites that are centered on male
-culture and geared toward a male audience, like GQ and Mens' Health,
-and uses that dataset to train an AI model to generate text. She uses
-prompts like
+	SLIDE
+	https://github.com/jfung53/mensmagbot
 
-    SLIDE masculinity prompts
+    The project is an image generator generates a text snippet based on
+    content about masculinity. Basically, it scrapes websites that are
+    intended toward a male audience, like GQ and Mens' Health, and uses
+    that dataset to train an AI model to generate text. She uses prompts
+    like
 
-Then, she uses prompts like ...
+	SLIDE masculinity prompts
 
-#+begin_quote
-    "Men can be",
-    "Modern men are",
-    "Masculinity can be",
-    "Every man should",
-    "Any guy would",
-    "Real men",
-    "Male friendship is",
-    "Manhood is",
-    "Being a father means",
-    "Being a gentleman means"
-#+end_quote
+    Then, she uses prompts like ...
 
-This is an example that doesn't build just to produce, but builds for
-the sake of being reflexive, of being analytical. It adds knowledge to
-the world, not just another product or tool.
+    #+begin_quote
+	"Men can be",
+	"Modern men are",
+	"Masculinity can be",
+	"Every man should",
+	"Any guy would",
+	"Real men",
+	"Male friendship is",
+	"Manhood is",
+	"Being a father means",
+	"Being a gentleman means"
+    #+end_quote
 
-With the time that AI frees up from debugging, I hope that folks will
-spend that time theorizing these kinds of interventions.
+    And she gets results like:
 
+    SENTENCES
+
+    I think work like this is super useful, especially considering the
+    lack of attention masculinity by itself gets in cultural studies
+    contexts.
+  
+    (For example, while there is "womens' studies", "queer studies",
+    "asian studies", "black studies", there is no "mens studies". And
+    although some people might scoff and say most fields implicitly
+    center mens' perspectives, and while that may be true, that is all
+    the more reason why mens' studies should can examine this in
+    isolation). 
+
+    Coming back to this project --- this is an example that doesn't
+    build just to produce, but builds for the sake of being analytical.
+    It adds a new kind of knowledge to the world, not just another
+    product or tool.
+
+#+end_src
 Thank you.
 
 
